[gd_scene load_steps=21 format=3 uid="uid://d0p7eem5cnubx"]

[ext_resource type="Script" path="res://stages/main/main.gd" id="1_uw73h"]
[ext_resource type="Texture2D" uid="uid://bj74edfi26gtl" path="res://stages/main/world_generation/noise.tres" id="2_iuy5t"]
[ext_resource type="PackedScene" uid="uid://b13j56wiy5bjp" path="res://entities/player/player.tscn" id="2_rs7gc"]
[ext_resource type="Texture2D" uid="uid://bkgd462mpdf67" path="res://stages/main/world_generation/decoration_noise.tres" id="3_d1a5b"]
[ext_resource type="Resource" uid="uid://bnxpj0puqauvh" path="res://entities/player/inventory/player_inventory.tres" id="4_e8g6s"]
[ext_resource type="Resource" uid="uid://23lixjooraln" path="res://entities/player/inventory/player_equip_inventory.tres" id="4_jkkiy"]
[ext_resource type="PackedScene" uid="uid://madc445wb3oe" path="res://entities/chest/chest.tscn" id="7_5j5bh"]
[ext_resource type="Script" path="res://common/inventory/inventory_data.gd" id="8_0i1ge"]
[ext_resource type="PackedScene" uid="uid://b1yv6c124r1k7" path="res://common/inventory/crafting/crafting_inventory.tscn" id="8_8thps"]
[ext_resource type="PackedScene" uid="uid://brtyff5a5fflm" path="res://entities/menu/debug/debug_menu.tscn" id="11_f00c6"]
[ext_resource type="Script" path="res://common/inventory/inventory_interface.gd" id="12_5ileu"]
[ext_resource type="PackedScene" uid="uid://c05qpfqg6xjd7" path="res://utilities/day_night_cycle/day_night_cycle.tscn" id="12_dx3ki"]
[ext_resource type="PackedScene" uid="uid://7n3kvnhu76wv" path="res://common/inventory/inventory.tscn" id="13_utryv"]
[ext_resource type="TileSet" uid="uid://bcy0q2dkwpmny" path="res://stages/main/tile_set/tile_set.tres" id="13_xl4hy"]
[ext_resource type="PackedScene" uid="uid://dmsdop1snjvdn" path="res://common/inventory/slot.tscn" id="14_fq4si"]
[ext_resource type="PackedScene" uid="uid://25v8rjkwdg57" path="res://entities/menu/pause/pause_menu.tscn" id="15_fqub2"]
[ext_resource type="PackedScene" uid="uid://ce30hjwcituiy" path="res://common/inventory/hot_bar/hot_bar_inventory.tscn" id="15_sa7if"]
[ext_resource type="Script" path="res://common/inventory/slot_data.gd" id="15_ynty6"]
[ext_resource type="Script" path="res://stages/main/world_generation/world_gen.gd" id="16_dsn1p"]

[sub_resource type="Resource" id="Resource_csm5f"]
script = ExtResource("8_0i1ge")
slot_datas = Array[ExtResource("15_ynty6")]([null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_uw73h")

[node name="Player" parent="." node_paths=PackedStringArray("tile_map") instance=ExtResource("2_rs7gc")]
tile_map = NodePath("../TileMap")
inventory_data = ExtResource("4_e8g6s")
equip_inventory_data = ExtResource("4_jkkiy")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4.5, 4.5)
position_smoothing_enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_5ileu")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("13_utryv")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="EquipInventory" parent="UI/InventoryInterface" instance=ExtResource("13_utryv")]
layout_mode = 0
offset_left = 450.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 50.0

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("13_utryv")]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 76.0
offset_right = 50.0
offset_bottom = 116.0
grow_vertical = 2

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("14_fq4si")]
modulate = Color(1, 1, 1, 0.494118)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 65.0

[node name="CraftingInventory" parent="UI/InventoryInterface" node_paths=PackedStringArray("player") instance=ExtResource("8_8thps")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_right = 0.0
grow_horizontal = 0
player = NodePath("../../../Player")

[node name="HotBarInventory" parent="UI" node_paths=PackedStringArray("player") instance=ExtResource("15_sa7if")]
offset_left = 10.0
offset_top = 10.0
offset_right = 430.0
offset_bottom = 91.0
player = NodePath("../../Player")

[node name="PauseMenu" parent="UI" instance=ExtResource("15_fqub2")]
visible = false

[node name="DebugMenu" parent="UI" instance=ExtResource("11_f00c6")]
visible = false

[node name="DayNightCycle" parent="." instance=ExtResource("12_dx3ki")]

[node name="Chest" parent="." instance=ExtResource("7_5j5bh")]
position = Vector2(40, 3800)
inventory_data = SubResource("Resource_csm5f")

[node name="TileMap" type="Node2D" parent="."]
z_index = -1
y_sort_enabled = true
script = ExtResource("16_dsn1p")
noise_height_text = ExtResource("2_iuy5t")
noise_decoration_text = ExtResource("3_d1a5b")

[node name="Chunks" type="Node2D" parent="TileMap"]
z_as_relative = false
y_sort_enabled = true

[node name="water" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("13_xl4hy")

[node name="ground1" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("13_xl4hy")

[node name="ground2" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("13_xl4hy")

[node name="cliff" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("13_xl4hy")

[node name="environment" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("13_xl4hy")

[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_visibility_changed"]
